<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">POSPrinter-USB</string>
    <string name="btn_conn">Connect USB Printer</string>
    <string name="btnSend">Send Data</string>
    <string name="btn_test">Print  Test  Page</string>
    <string name="btnClose">Close</string>
    <string name="txt_content">&quot;&quot;</string>
    <string name="menu_settings">set</string>
    <string name="strLang">en</string>
    <string name="msg_getpermission">obtaining USB device access permissions success</string>
    <string name="msg_conn_state">USB device can not access, please re-connect</string>
    <string name="btn_bmp">Graphical Print</string>
    <string name="contentdescription"></string>
    <string name="empty1">Input is empty, in the text box to enter the content to be converted &#8230;</string>
    <string name="empty">Input is empty</string>
    <string name="choose_paper_width">Paper width:</string>
    <string name="width1">58mm</string>
    <string name="width2">80mm</string>
    <string name="printhex">HEX</string>
    <string name="msg_state">Input Error!</string>
    
    <string name="printpicture">Print Picture</string>
    <string name="chosecommand">Please select instruction</string>
    <string name="btn_prttable">Print Form</string>
    <string name="Smallticketprinting">Small Ticket Printing</string>
    <string name="btn_prtcode">Print 1D/2D Codebar</string>
    <string name="msg_error">Input errors, please check!</string>
    <string name="choose_printcoding"></string>
    <string name="big5">BIG5</string>
    <string name="thai">Thai</string>
    <string name="kor">Korean</string>
    <string name="gbk12">Simplified</string>

</resources>